--- a/CrossEye/MainPage.xaml
+++ b/CrossEye/MainPage.xaml
@@ -57,8 +57,8 @@
         </StackPanel>
 
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <Rectangle x:Name="leftRect" HorizontalAlignment="Left" Fill="#FFB4B4B4" Margin="0" Width="300"/>
-            <Rectangle x:Name="rightRect" HorizontalAlignment="Right" Fill="#FFB4B4B4" Margin="0" Width="300"/>
+            <Rectangle x:Name="leftRect" HorizontalAlignment="Left" Fill="#FFB4B4B4" Margin="0" Width="300" DoubleTap="button1_Click"/>
+            <Rectangle x:Name="rightRect" HorizontalAlignment="Right" Fill="#FFB4B4B4" Margin="0" Width="300" DoubleTap="button2_Click"/>
         </Grid>
     </Grid>
 
