--- a/CrossEye/MainPage.xaml
+++ b/CrossEye/MainPage.xaml
@@ -11,7 +11,7 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Landscape" Orientation="Landscape"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="False">
 
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar>
@@ -37,7 +37,7 @@
                                             IsEnabled="True"
                                             Text="right image"
                                             Click="button2_Click"/>
-            
+
             <shell:ApplicationBarIconButton IconUri="/Assets/AppBar/save.png"
                                             IsEnabled="True"
                                             Text="save" 
@@ -56,8 +56,12 @@
         </StackPanel>
 
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,12">
-            <Rectangle x:Name="leftRect" HorizontalAlignment="Left" Fill="#FFB4B4B4" Margin="0" Width="300" DoubleTap="button1_Click"/>
-            <Rectangle x:Name="rightRect" HorizontalAlignment="Right" Fill="#FFB4B4B4" Margin="0" Width="300" DoubleTap="button2_Click"/>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Rectangle x:Name="leftRect" Fill="#FFB4B4B4" Margin="0,0,5,0" DoubleTap="button1_Click" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Rectangle x:Name="rightRect" Fill="#FFB4B4B4" DoubleTap="button2_Click" Grid.Column="1" Margin="5,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Grid>
     </Grid>
 
